Sat Jul  5 23:42:23 2008  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (NUM2INT): cast to int.
	  (FIX2INT): ditto.
	  (NUM2UINT): cast to unsigned int.
	  (FIX2UINT): ditto.

Sat Jul  5 23:10:41 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_pipe): new function for handling EMFILE and ENFILE
	  error of pipe().
	  (UPDATE_MAXFD_PIPE): removed.
	  (pipe_open): use rb_pipe.
	  (rb_io_s_pipe): ditto.

	* process.c (pipe_nocrash): use rb_pipe.

	* include/ruby/intern.h (rb_pipe): declared.

Sat Jul  5 22:22:27 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_initialize): NUM2INT() returns int.

	* thread.c (timer_thread_function), thread_pthread.c (thread_timer),
	  thread_win32.c (timer_thread_func), thread_{pthread,win32}.c
	  (rb_thread_create_timer_thread): passing VM.

Sat Jul  5 20:53:18 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_word.rb: check word installed.

Sat Jul  5 16:12:54 2008  Narihiro Nakamura  <authorNari@gmail.com>

	* gc.c: revert. before lazy sweep.

Sat Jul  5 09:55:44 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add WIN32OLE#ole_respond_to?

	* test/win32ole/test_win32ole.rb: ditto.

Sat Jul  5 08:48:05 2008  Tanaka Akira  <akr@fsij.org>

	* re.c (unescape_nonascii): add has_property argument not to
	  raise error by /\p{Hiragana}\u{3042}/ in EUC-JP script.
	  (rb_reg_preprocess): use has_property argument to make regexp
	  encoding fixed.

Sat Jul  5 08:29:47 2008  Tanaka Akira  <akr@fsij.org>

	* re.c (unescape_nonascii): make regexp fixed_encoding if \p is used.
	  fixed [ruby-core:17279].

Fri Jul  4 23:12:53 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (d2time): fix the bug of VT_DATE 
	  to String conversion when negative value.
	  
	* test/win32ole/test_win32ole_variant.rb: ditto.

Fri Jul  4 22:15:29 2008  Tanaka Akira  <akr@fsij.org>

	* lib/test/unit/testcase.rb: collect decendants of