@@ -1,3 +1,11 @@
+Sun Jul  6 00:56:51 2008  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/socket.c (host_str): fix type mismatch in rb_raise
+	  format and argument.
+	  (port_str): ditto.
+	  (unix_recv_io): ditto.
+	  (sock_s_unpack_sockaddr_un): ditto.
+
 Sat Jul  5 23:42:23 2008  Tanaka Akira  <akr@fsij.org>
 
 	* include/ruby/ruby.h (NUM2INT): cast to int.
